Some sonar fixes